# mc_statistic

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: mc-ststistic-ci.yml
src/core/: asgi.py  settings.py  wsgi.py
src/medi_care/: apps.py  schema.py  tests.py
src/medi_care/queries/: doctor_stats.py
src/medi_care/services/: doctor_stats_service.py
src/medi_care/types/: __init__.py  doctor_stats.py
